<resources>
    <string name="app_name">Momo</string>
    <string name="title_activity_maps">Map</string>

    <string name="id">Id</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="title_activity_create_map">CreateMapActivity</string>

    <string name="form_name">Name</string>
    <string name="form_description">Description</string>
    <string name="form_private">Private</string>
    <string name="name_length_error">Name must be between 2 and 10 characters.</string>
    <string name="done">Done!</string>
    <string name="error">An unexpected error occurred</string>

</resources>
