<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <EditText
      android:id="@+id/editId"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/id"
      android:layout_marginTop="10dp"
      />

  <EditText
      android:id="@+id/editPwd"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/password"
      android:layout_marginTop="10dp"
      />

  <android.support.v7.widget.AppCompatButton
      android:id="@+id/btnLogin"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/login"
      />

</LinearLayout>
